corrections + nouveaux css

--- a/1-intro.html
+++ b/1-intro.html
@@ -237,9 +237,9 @@
 </section>
 
 <section class="center positive">
-	<strong>Material flexibility for structural rigidity</strong>
-	<br><br>
-	<strong>Curved shape from flat and regular grid</strong>
+	<h5>Key Benefits</h5>
+	<p>Material flexibility for <mark>structural rigidity</mark></p>
+	<p><mark>Curved shape</mark> from flat and regular grid</p>
 	<aside class="notes">
 	Les deux éléments clefs du concept sont les suivants.
 	<hr>
@@ -260,11 +260,10 @@
 	</aside>
 </section>
 <section class="center negative">
-	<strong>Form <> Grid <> Structure</strong>
-	<br><br>
-	<strong>Nonlinear Formfinding</strong>
-	<br><br>
-	<strong>Detailing & Envelope</strong>
+	<h5>Key Complexities</h5>
+	<p>Form <> Grid <> Structure</p>
+	<p><mark>Nonlinear</mark> Formfinding</p>
+	<p>Detailing & Envelope</p>
 	<aside class="notes">
 	On a vu cependant que cette efficacité n'est possible qu'au prix d'une vraie complexité ...
 	<hr>
