--- a/2-creteil.html
+++ b/2-creteil.html
@@ -31,11 +31,11 @@
 	L'objectif est de parvenir à définir une structure qui réponde à la fois aux enjeux architecturaux et structurels du projet.
 	</aside>
 </section>
-<section class="center positive">
+<section class="center">
 	<p style="text-align: center">
-		<strong>formfinding&ensp;>&ensp;gridfinding</strong>
+		<strong>Formfinding&ensp;>&ensp;<mark>Gridfinding</mark></strong>
 		<br><br>
-		<strong>shorter cycles</strong>
+		<strong><mark>Shorter</mark> cycles</strong>
 	</p>
 	<aside class="notes">
 		A créteil, la méthode que nous avons mise en oeuvre vise à remettre la forme au centre du processus de conception pour redonner plus de place à l'expression de l'intention architecturale.
@@ -67,7 +67,7 @@
 			<img data-src="./img/curvature_analysis.jpg" width="800px">
 		</td>
 		<td width="" style="text-align:center; vertical-align:middle;">
-			NURBS Modeling<br>+<br>Surface Curvature Evaluation
+			<small><mark>NURBS Modeling</mark><hr>Surface Curvature Evaluation</small>
 		</td>
 	</tr>
 	<tr style="height:20px;"><td colspan="3" style="border-top:0px solid black"><hr></td></tr>
@@ -80,8 +80,7 @@
 			<img data-src="./img/compass_grids.png" width="400px">
 		</td>
 		<td width="" style="text-align:center; vertical-align:middle">
-			Compass Method<br>+<br>
-			Spline Curvature Evaluation<br>
+			<small><mark>Compass Method</mark><hr>Spline Curvature Evaluation</small><br>
 			<cite>[Otto 1971], [Masson 2017]</cite>
 		</td>
 	</tr>
@@ -109,14 +108,15 @@
 			<object width="600px" type="image/svg+xml" data="img/douthe.svg"></object>
 		</td>
 		<td width="" style="text-align:center; vertical-align:middle;">
-			Formfinding<br>+<br>Bending Stress Analysis<br>
+			<small><mark>Formfinding</mark><hr>Bending Stress Analysis</small>
+			<cite>[Adriaenssens 2001], [Douthe 2007]</cite>
 		</td>
 	</tr>
-	<tr style="">
+	<!-- <tr style="">
 		<td colspan="3" style="border-top:0px solid black">
 			<cite>[Wakefield 1980], [Adriaenssens, Barnes, Williams 2001], [Douthe 2007]</cite>
 		</td>
-	</tr>
+	</tr> -->
 	<tr style="height:20px;"><td colspan="3" style="border-top:0px solid black"><hr></td></tr>
 	<tr style="height:20px;"></tr>
 	<tr style="border-top:0px solid black">
@@ -124,7 +124,8 @@
 			<img data-src="./img/gsa.jpg" width="700px">
 		</td>
 		<td width="" style="text-align:center; vertical-align:middle">
-			Structural Analysis<br>+<br>Eurocode<br>
+			<small><mark>Structural Analysis</mark><hr>Eurocode</small>
+			<br><cite>[Oasys GSA]</cite>
 		</td>
 	</tr>
 	</table>
@@ -231,10 +232,9 @@
 <section class="center positive">
 	<h5>Results</h5>
 	<ul>
-		<li>Agility > enhanced exploration of the design space</li>
-		<li>Gridfinding > architectural freedom</li>
-		<li>Pre-analysis with curvature > faster cyles</li>
-		<li>Formfinding > real-time mechanical insights</li>
+		<li>Gridfinding > <mark>enhanced exploration</mark> of the design space</li>
+		<li>Curvature analysis > <mark>agility</mark> </li>
+		<li>Formfinding > real-time <mark>mechanical insights</mark></li>
 	</ul>
 	<aside class="notes">
 		La méthode de conception mise en oeuvre nous a donné une certaine agilité et permis d'explorer plus largement l'espace de design en termes de formes et de maillages.
@@ -248,7 +248,7 @@
 <section class="center negative">
 	<h5>Limitations</h5>
 	<ul>
-		<li>Beam model is only 3-DOFs</li>
+		<li>Beam model is <mark>only 3-DOFs</mark></li>
 		<li>No torsion</li>
 		<li>No anisotropic cross-section</li>
 		<li>No transfert of moment</li>
