--- a/5-numeric.html
+++ b/5-numeric.html
@@ -27,19 +27,19 @@
 
 <section class="">
 	<h5 class="">Previous Works</h5>
-	<p>Discrete Cruvature (DDG)
+	<p>Discrete Curvature (DDG) <br>
 		<br> <cite>Vouga, Lectures in discrete differential geometry, 2014</cite>
 		<br> <cite>Romon, Introduction à la géométrie différentielle discrète, 2013</cite>
 		<br> <cite>Hoffmann, Math-for-Industry lecture note series, 2008</cite>
 		<br> <cite>Bobenko, Discrete differential geometry, 2007</cite>
 	</p>
 	<hr>
-	<div class="red">
+	<div class="">
 	<ul>
-		<li>There is more than one way to define the discrete curvature</li>
+		<li>Discrete Curvature > <mark>ambiguous</mark></li>
 		<li>Definitions are not equivalents</li>
-		<li>We shall rely the one that suites our needs best</li>
-		<li>Bending energy benchmark > $\int_{[O,L]} \kappa^2$</li>
+		<li>Which one best suits your need ?</li>
+		<li><mark>Bending energy</mark> benchmark > $\int \kappa^2$</li>
 	</ul>
 	</div>
 	<aside class="notes">
@@ -83,9 +83,9 @@
 <section class="">
 	<h5 class="">Discrete Curvature</h5>
 	<ul>
-		<li>The edge-based curvature diverges when the curve kinks</li>
-		<li>This is interesting for penalyzing kinked configurations</li>
-		<li>However in our case such configurations are not likely to arise</li>
+		<li>Edge-based curvature > diverges when <mark>curve kinks</mark></li>
+		<li>Interesting for penalyzing kinked configurations</li>
+		<li>Such configurations are not likely to arise</li>
 	</ul>
 	<hr style="margin-bottom: -0.5em;">
 	<table class="imgtable">
@@ -94,8 +94,8 @@
 		<td height="400px"><img data-src="./img/eq/curvature_edge.gif"></td>
 	</tr>
 	<tr>
-		<td><small>circumscribed osculating circle ($\kappa_1$)</small><br></td>
-		<td><small>inscribed osculating circle ($\kappa_3$)</small><br></td>
+		<td><p><small>circumscribed osculating circle ($\kappa_1$)</small></p></td>
+		<td><p><small>inscribed osculating circle ($\kappa_3$)</small></p></td>
 	</tr>
 	<!-- <tr style="height:15px;"></tr> -->
 	<tr style="border-top:0px solid black">
@@ -365,7 +365,7 @@
 		<span class="imgsrc" data-src="./img/eq/bending_4.svg" data-fragment-index="0"></span>
 		<span class="fragment imgsrc" data-src="./img/eq/bending_5.svg" data-fragment-index="1"></span>		
 	</div>
-	<hr>
+	<!-- <hr> -->
 	<div class="fragment">
 		<img data-src="./img/eq/bending_6.svg" width="80%">
 		<img data-src="./img/eq/bending_7.svg" width="80%">
@@ -407,7 +407,7 @@
 	<ul>
 		<li>Linear interpolation : mid-edge > vertex </li>
 		<li>From the equations of motion with inertial terms neglected</li>
-		<li>Beam > particle-spring system</li>
+		<li>Beam > <mark>particle-spring system</mark></li>
 	</ul>
 	<hr>
 	<img data-src="./img/eq/interpolation_1.svg" width="80%">
@@ -437,9 +437,8 @@
 <section class="">
 	<h5 class="">Particle-Spring System</h5>
 	<ul>
-		<li>Beam(s) > particle-spring system</li>
-		<li>Particle motion under resultants > $R_i^x\;,\;R_i^{\theta}$</li>
-		<li>Translational and rotational lumped masses > $m_i^x\;,\;m_i^{\theta}$</li>
+		<li>Particle(s) motion under resultants > $R_i^x\;,\;R_i^{\theta}$</li>
+		<li>Lumped masses > $m_i^x\;,\;m_i^{\theta}$</li>
 		<li>Curve-angle representation > 4-DOFs</li>
 	</ul>
 	<hr>
@@ -471,8 +470,7 @@
 	</ul>
 	<hr>
 	<object width="75%" type="image/svg+xml" data="img/eq/pendulum_anim_Ep.svg"></object>
-	<br>
-	<cite>[Day, 1962]</cite>
+	<p style="margin-top:-0.5em;">	<cite>[Day, 1962]</cite></p>
 	<aside class="notes">
 		Notre objectif final n'est pas de faire de la dynamique, bien que notre élément en soit tout à fait capable. Ce que nous voulons calculer c'est la forme d'équilibre statique d'un gridshell.
 		<hr>
@@ -484,9 +482,8 @@
 	</aside>
 </section>
 
-<section class=" center positive" >
-	<h5 class="" style="text-align:center;">Achievement</h5>
-	<br>
+<section class="center positive" >
+	<h5>Achievement</h5>
 	<ul style="text-align:left; margin-left:2em;">
 		<li>Dynamic beam model from Kirchhoff theory</li>
 		<li>Only 4-DOFs</li>
