--- a/6-marsupilami.html
+++ b/6-marsupilami.html
@@ -29,11 +29,11 @@
 </section>
 
 <section class="">
-	<h5 class="">environment</h5>
+	<h5>environment</h5>
 	<ul>
-		<li>Rhino : (proprietary) versatile 3D modeler, powered by NURBS</li>
-		<li>Grasshopper : multipurpose graphical algorithm editor for Rhino</li>
-		<li>Well established tools in the field of architetural and structural design of complex envelopes</li>
+		<li>Rhino : versatile 3D modeler (NURBS)</li>
+		<li>Grasshopper : graphical algorithm editor</li>
+		<li>Well established (architects & engineers)</li>
 	</ul>
 	<hr>
 	<img class="stretch" data-src="./img/case/rhgh.png"/>
@@ -57,10 +57,10 @@
 <section class="">
 		<h5 class="">Coding Language</h5>
 		<ul>
-			<li>C# is an ECMA standard (top five language)</li>
+			<li>C# is an ECMA standard (top five)</li>
 			<li>Garbage collection</li>
-			<li>.Net Framework > .Net Core / Mono (open source)</li>
-			<li>Portability : Windows, Linux, macOS, and mobile devices</li>
+			<li>.Net Framework > <mark>Open Source</mark> .Net Core / Mono </li>
+			<li><mark>Portability</mark> : Windows, Linux, macOS, ...</li>
 			<li>Few existing scientific librairies (C++, Python, Julia)</li>
 		</ul>
 		</div>
@@ -81,9 +81,9 @@
 		<li>Application Programming Interface (portable)</li>
 		<li>Dependence-Free</li>
 		<hr>
-		<li>Marsupilami.MathLib : Point, Vector, Frame, Centerline</li>
-		<li>Marsupilami.CoreLib : Element, Material, Section, Load, Solver</li>
-		<li>Marsupilami.Gh : Grasshopper interface</li>
+		<li><mark>Marsupilami.MathLib</mark> : Point, Vector, Frame, Centerline</li>
+		<li><mark>Marsupilami.CoreLib</mark> : Element, Material, Section, Load, Solver</li>
+		<li><mark>Marsupilami.Gh</mark> : Grasshopper interface</li>
 	</ul>
 	<hr>
 	<img class="stretch" data-src="./img/case/github.png"/>
@@ -102,8 +102,8 @@
 <section class="">
 	<h5 class="">Architecture : CODE</h5>
 	<ul>
-		<li>Object-Oriented Programming > Modularity & Abstraction</li>
-		<li>Sequential vs. Event-driven Programming</li>
+		<li><mark>Object-Oriented</mark> Programming > Modularity & Abstraction</li>
+		<li>Sequential vs. <mark>Event-driven</mark> Programming</li>
 		<li>Parallel Programing</li>
 	</ul>
 	<hr>
@@ -137,13 +137,13 @@
 <section class="">
 	<h5 class="">Constrained Arch</h5>
 	<ul>
-		<li>Naturally straight beam with rectangular cross-section $4\times6cm$</li>
-		<li>$E=25\,GPa \;,\; G=10\,GPa \;  $</li>
+		<li>Naturally straight beam with rectangular cross-section $4\times6\,cm$</li>
 		<li>$L=10.0\,m\;,\;a = 2.0\,m$</li>
+		<li>$E=25\,GPa \;,\; G=10\,GPa \;  $</li>
 		<li>Discretization (number of edges) : $n=6,12,24,48,96$ </li>
 	</ul>
 	<hr>
-	<img data-src="./img/eq/bench_drawing.svg">
+	<img data-src="./img/eq/bench_drawing.svg" width="35%">
 	<aside class="notes">
 		Le problème considéré est le flambage d'une poutre naturellement droite, de longeur 10m, et de section rectangulaire de  4x6 centimètres.
 		<hr>
@@ -179,7 +179,7 @@
 <section class="">
 	<h5 class="">Constrained Arch</h5>
 	<ul>
-		<li>Relative error for apex position (M/A) : 12.6 - 3.2 - 0.8 - 0.2 - 0.0 %</li>
+		<li><mark>Relative error</mark> for apex position (M/A) : 12.6 - 3.2 - 0.8 - 0.2 - 0.0 %</li>
 		<li>CPU Time for Marsupilami (ST) : 80 - 160 - 320 - 740 - 1480 ms</li>
 		<li>CPU Time for Abaqus (MT) : 4200 - 5400 - 6400 - 6400 - 9700 ms</li>
 	</ul>
