--- a/4-model_2.html
+++ b/4-model_2.html
@@ -32,14 +32,15 @@
 		<br> <cite>Dill, Archive for History of Exact Sciences, 1992</cite>
 	</p>
 	<div class="">
-		<hr>
-		<p>Geometrically Exact Beam
-			<br><cite>Simo & Vu-Quoc, International Journal of Solids and Structures, 1991</cite>
-			<br> <cite>Reissner, Studies in Applied Mathematics, 1973</cite>
-		</p>
-		<p>Special Theory of Cosserat Rods
-			<br> <cite>Antman 2005</cite>
-		</p>
+	<hr>
+	<p>Special Theory of Cosserat Rods
+		<br> <cite>Antman 2005</cite>
+	</p>
+	<hr>
+	<p>Geometrically Exact Beam
+		<br><cite>Simo & Vu-Quoc, International Journal of Solids and Structures, 1991</cite>
+		<br> <cite>Reissner, Studies in Applied Mathematics, 1973</cite>
+	</p>
 	</div>
 	<aside class="notes">
 		Je vais donc réécrire les équations de Kirchhoff en m'appuyant sur l'excellente présentation qu'en a faite Dill en 92.
@@ -52,24 +53,23 @@
 	<h5 class="">Assumptions</h5>
 	<ul>
 		<li>Slender</li>
-		<li>Shear center = Centroid</li>
-		<li>Small strains but finite rotations allowed</li>
+		<li>Shear center = centroid</li>
+		<li>Small strains but finite rotations</li>
 		<li>Negligible shear</li>
-		<li>Cross-sections are free to warp</li>
-		<li>The material is isotropic and linear-elastic</li>
+		<li>Cross-sections > free to warp</li>
+		<li>Material > isotropic & linear-elastic</li>
 	</ul>
 	<hr>
 	<div class="">
-		<p class="red">"The deformed state differs by small deformations from a motion in which cross sections remain plane, undistorted, and normal to the axis."</p>
+		<p class=""><q>"The deformed state differs by small deformations from a motion in which cross sections remain plane, undistorted, and normal to the axis."</q><br><cite style="text-align:right;">- [Dill 1992]</cite></p>
 		<!-- <hr> -->
 		<ul>
-			<li class="red">Centerline is almost inextensible</li>
-			<li class="red">Cross-section remains almost planar</li>
+			<li class="">Centerline is <mark>almost inextensible</mark> </li>
+			<li class="">Cross-section remains <mark>almost planar</mark></li>
 		</ul>
 		<!-- <p class="">The rod is not strictly inextensible but its extension must remain small.</p>
 		<p class="">Cross-sections do not remain strictly planar but only almost planar.</p> -->
 	</div>
-	<p><cite>[Dill 1992]</cite></p>
 	<aside class="notes">
 		Les hypothèses faites dans le cadre de la théorie de Kirchhoff sont les suivantes :
 		<ul>
@@ -106,16 +106,14 @@
 		<li>arc length of the reference configuration > $s$</li>
 		<li>Centerline  > $\mathbf{x}(s)$</li>
 		<li>Material frame  > $\{\mathbf{d}_3,\mathbf{d}_1,\mathbf{d}_2\}(s)$ </li>
-		<li>$\mathbf{d}_1,\mathbf{d}_2$ are the principal axis of the cross-section </li>
+		<li>$\mathbf{d}_1,\mathbf{d}_2$ > principal axis of the cross-section </li>
 		<li>$\mathbf{d}_3$ is tangent to $\mathbf{x}(s)$</li>
 		<li>Material point  > $\mathbf{p}(s,X_1,X_2)$</li>
 	</ul>
 	<hr>
 	<img width="80%" src="./img/eq/cosserat_31.svg">
-	<div class="red">
 	<hr>
-	<p>The curve-angle representation can be leveraged to adopt a 4-DOFs formulation</p>
-	</div>
+	<p><mark>Curve-Angle</mark> representation can be leveraged to adopt a <mark>4-DOFs</mark> formulation</p>
 	<aside class="notes">
 		La cinématique de la poutre reste sensiblement la même que celle présentée dans l'approche variationelle.
 		<hr>
@@ -147,7 +145,7 @@
 		<li>Force strains > $\mathbf{\eta}(s,t) = (1+\epsilon)\mathbf{d}_3(s,t)$</li>
 		<li>Moment strains > $\mathbf{\varkappa}(s,t) = (1+\epsilon) \mathbf{\Omega}(s,t)$</li>
 		<hr>
-		<li>Extension > $\epsilon(s,t) \ll 1$</li>
+		<li><mark>Extension</mark> > $\epsilon(s,t) \ll 1$</li>
 		<li>Negligible shear > $\eta_1 = \eta_2 = 0$</li>
 	</ul>
 	<hr>
@@ -164,7 +162,6 @@
 <section class="">
 	<h5 class="">Constitutive Equations</h5>
 	<ul>
-		<li>Deduced from the assumptions (linear elasticity + small $\mathbf{u}$)</li>
 		<li>Include axial internal force > $F_3$</li>
 		<li>Warping function $\varphi_s$ > torsion constant $J\;$</li>
 	</ul>
@@ -196,8 +193,8 @@
 <section class="">
 	<h5 class="">Dynamical Equations</h5>
 	<ul>
-		<li>Already focused on 4-DOFs</li>
-		<li>Shear force is a reacting parameter</li>
+		<li><mark>Shear</mark> force is a reacting parameter</li>
+		<li>Already focused on <mark>4-DOFs</mark></li>
 	</ul>
 	<hr>
 	<!-- <img data-src="./img/eq/dynamic_equations.svg" width="80%"> -->
