--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500|Rubik:300,400,900" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Archivo+Black|Rubik" rel="stylesheet">
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/thesis.css" id="theme">
+		<link rel="stylesheet" href="css/theme/thesis2.css" id="theme">
 		<!-- <link rel="stylesheet" href="css/theme/white.css" id="theme"> -->
 		<link rel="stylesheet" href="plugin/title-footer/title-footer.css">		
 		<!-- Theme used for syntax highlighting of code -->
@@ -78,7 +78,7 @@
 
 			<section class="center"  data-background-transition="fade" data-transition="fade-in fade-out">
 				<!-- <h3> Brief </h3> -->
-				<p><strong>Provide new tools to help architects and engineers<br>to design and build elastic gridshells</strong></p>
+				<p><strong>Provide new <mark>tools</mark> to help architects and engineers<br>to design and build elastic gridshells</strong></p>
 				<br>
 				<p><small>Focus : discrete beam models for nonlinear formfinding and structural analysis</small></p>
 				<aside class="notes">
@@ -359,13 +359,13 @@
 		<script>
 				// AUTOHIDE h7 tags for slides with data-state="autohide"
 				Reveal.addEventListener( 'slidechanged', function( event ) {
-					var pause = 2.5;
+					var pause = 3.0;
 					var transition = .75;
 					var pause = 0.75;
 					var element = $('section.present > h7');
 					tl = new TimelineMax();
-					tl.to(element, transition, {css:{opacity:0.8}});
-					tl.fromTo(element, transition, {css: {opacity:0.8}}, {css:{opacity:0}},"+="+pause);
+					tl.to(element, transition, {css:{opacity:0.9}});
+					tl.fromTo(element, transition, {css: {opacity:0.9}}, {css:{opacity:0}},"+="+pause);
 					tl.play();
 				} );
 		</script>
