--- a/3-model_1.html
+++ b/3-model_1.html
@@ -164,7 +164,7 @@
 	<ul>
 		<li>$\tau_f$ > angular speed of the osculating plane around $\mathbf{t}$</li>
 		<li>Where $\kappa = 0$ > undefined, even if $\mathbf{x} \in \mathcal{C}^1$</li>
-		<li>Note suitable for modeling material frames</li>
+		<li>Not suitable for modeling material frames</li>
 	</ul>
 	<hr>
 	<img class="imgfragment" src="./img/eq/frenet_7.svg" width="65%"/>
@@ -449,7 +449,7 @@
 		<li><mark>Static</mark> equations only > dynamical equations ?</li>
 		<li>Inextensibility as a stiff constraint ($\mathbf{N}$)</li>
 		<li>External loads ($\mathbf{F}_{ext} \;,\;\mathbf{M}_{ext}\;,\;\mathbf{f}_{ext} \;,\;\mathbf{m}_{ext}$)</li>
-		<li><mark>Transfert</mark> of forces and moments</li>
+		<li><mark>Transfer</mark> of forces and moments</li>
 		<li>Boundary conditions and complex connections</li>
 	</ul>
 	<aside class="notes">
