--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 			<section class="center"  data-background-transition="fade" data-transition="fade-in fade-out">
 				<!-- <h3> Brief </h3> -->
-				<p><strong>Provide new <mark>tools</mark> to help architects and engineers<br>to design and build elastic gridshells</strong></p>
+				<p><strong>Provide new <mark>tools</mark> to help architects and engineers<br> designing and building elastic gridshells</strong></p>
 				<br>
 				<p><small>Focus : discrete beam models for nonlinear formfinding and structural analysis</small></p>
 				<aside class="notes">
