--- a/1-intro.html
+++ b/1-intro.html
@@ -40,7 +40,7 @@
 	</aside>
 </section>
 <section class="black center" data-background-video="./img/mov/booby.mp4" data-background-size="contain" data-background-video-muted >
-	<h7 class="">Structural Skin 2015</h7>
+	<h7 class="">Hybrid Skin 2015</h7>
 	<aside class="notes">
 		Second projet, un prototype d'enveloppe structurelle hybride, réalisé en deuxième année de thèse. Il est visible sur le campus. Il couvre environ 10m2 pour une portée de 3m. 
 		<hr>
@@ -285,7 +285,7 @@
 	</aside>
 </section> -->
 <section class="center" data-background-image="./img/mannheim_1.jpg" data-background-size="cover" data-state="autohide" data-autoslide="">
-	<h7 class="">Mannheim 1975</h7>
+	<h7 class="">Frei Otto > Mannheim 1975</h7>
 	<aside class="notes">
 	Enfin, je ne pourrais pas terminer de bonne fois cette partie introductive sans mentionner Frei Otto, qui a inventé et étudié ces structures dans les années 60, et à qui on doit la multihalle de Mannheim : 
 	<hr>
