--- a/index.html
+++ b/index.html
@@ -46,23 +46,38 @@
 				
 				<table class="" width="100%" style="text-align:left; vertical-align:middle;">
 					<!-- <tr style="height:15px;"></tr> -->
-					<tr style="border-top:0px solid black">
+					<tr>
 						<td width="30%" style="text-align:left; vertical-align:middle;">
 							<img data-src="./img/logo/enpc.svg" width="100%">
 						</td>
 						<td width="40%" style="text-align:center; vertical-align:middle;">
-							<small>Thèse de doctorat présentée le</small>		
+							<p>
+							<small>Thèse de doctorat présentée le</small>	
 							<br>
 							<small>20/12/2017</small>
 							<br>
 							<small>Lionel du Peloux</small>
+							</p>
 						</td>
 						<td width="30%" style="text-align:center; vertical-align:middle;">
-							<small>Olivier Baverel (Dir.)</small>
-							<br>
-							<small>Jean-François Caron</small>
-							<br>
-							<small>Cyril Douthe</small>
+							<img data-src="./img/logo/navier.svg" >
+						</td>
+					</tr>
+					<tr>
+						<td width="30%" style="text-align:left; vertical-align:middle;">
+						<p>
+						<small>Jean-François Caron</small>
+						</p>
+						</td>
+						<td width="40%" style="text-align:center; vertical-align:middle;">
+						<p>
+						<small>Olivier Baverel (Dir.)</small>
+						</p>
+						</td>
+						<td width="30%" style="text-align:center; vertical-align:middle;">
+						<p>
+						<small>Cyril Douthe</small>
+						</p>
 						</td>
 					</tr>
 				</table>
@@ -71,7 +86,7 @@
 					<hr>
 					Bonjour à toutes et à tous,
 					<hr>
-					Je vais aujourd'hui vous présenter mon travail de recherche sur les structures de type gridshell élastique. En m'intéressant plus spécifiquement aux modèles de calcul dédiés à l'analyse de ces structures, qui sont fortement précontraintes du fait de leur mise en forme. On parlera de précontrainte de flexion.
+					Je vais aujourd'hui vous présenter mon travail de recherche sur les structures de type gridshell élastique, effectué sous la direction d'Olivier Baverel. En m'intéressant plus spécifiquement aux modèles de calcul dédiés à l'analyse de ces structures, qui sont fortement précontraintes du fait de leur mise en forme. On parlera de précontrainte de flexion.
 					<hr>
 					On verra que ces ouvrages sont complexes à concevoir, et que les outils d'analyse existants ne permettent pas de répondre de manière efficace aux besoins des architectes et des ingénieurs dans un contexte de projet.
 			</section>
