--- a/2-creteil.html
+++ b/2-creteil.html
@@ -67,7 +67,7 @@
 			<img data-src="./img/curvature_analysis.jpg" width="800px">
 		</td>
 		<td width="" style="text-align:center; vertical-align:middle;">
-			<small><mark>NURBS Modeling</mark><hr>Surface Curvature Evaluation</small>
+			<mark>NURBS Modeling</mark><hr><small>Surface Curvature Evaluation</small>
 		</td>
 	</tr>
 	<tr style="height:20px;"><td colspan="3" style="border-top:0px solid black"><hr></td></tr>
@@ -80,8 +80,8 @@
 			<img data-src="./img/compass_grids.png" width="400px">
 		</td>
 		<td width="" style="text-align:center; vertical-align:middle">
-			<small><mark>Compass Method</mark><hr>Spline Curvature Evaluation</small><br>
-			<cite>[Otto 1971], [Masson 2017]</cite>
+			<mark>Compass Method</mark><hr><small>Spline Curvature Evaluation</small><br>
+			<small><cite>[Otto 1971], [Masson 2017]</cite></small>
 		</td>
 	</tr>
 	</table>
@@ -108,8 +108,9 @@
 			<object width="600px" type="image/svg+xml" data="img/douthe.svg"></object>
 		</td>
 		<td width="" style="text-align:center; vertical-align:middle;">
-			<small><mark>Formfinding</mark><hr>Bending Stress Analysis</small>
-			<cite>[Adriaenssens 2001], [Douthe 2007]</cite>
+			<mark>Formfinding</mark><hr><small>Bending Stress Analysis</small>
+			<br>
+			<small><cite>[Adriaenssens 2001], [Douthe 2007]</cite></small>
 		</td>
 	</tr>
 	<!-- <tr style="">
@@ -124,8 +125,8 @@
 			<img data-src="./img/gsa.jpg" width="700px">
 		</td>
 		<td width="" style="text-align:center; vertical-align:middle">
-			<small><mark>Structural Analysis</mark><hr>Eurocode</small>
-			<br><cite>[Oasys GSA]</cite>
+			<mark>Structural Analysis</mark><hr><small>Eurocode</small>
+			<br><small><cite>[Oasys GSA]</cite></small>
 		</td>
 	</tr>
 	</table>
