--- a/3-model_1.html
+++ b/3-model_1.html
@@ -259,7 +259,7 @@
 		<hr>
 		<img class="" data-src="./img/eq/speed_bishop.svg" width="80%">
 	</div>
-	<p><cite>There is more than one way to frame a curve [Bishop 1975]</cite></p>
+	<p><q>"There is more than one way to frame a curve"</q><cite> - [Bishop 1975]</cite></p>
 	<aside class="notes">
 	Ainsi, le repère de Frenet sera défini par la torsion géométrique de Frenet notée tau_f
 	<hr>
@@ -279,7 +279,7 @@
 	</ul>
 	<hr>
 	<img class="" data-src="./img/eq/curve_angle_1.svg" width="65%">
-	<br><cite>[Bishop 1975] > [Langer & Singer 1996] > [Bergou et al. 2008]</cite>
+	<br><p><cite>[Bishop 1975] > [Langer & Singer 1996] > [Bergou et al. 2008]</cite></p>
 	<aside class="notes">
 		Nous possédons maintenant tous les éléments pour établir une description cinématique de notre poutre à seulement 4 degrés de liberté.
 		<hr>
@@ -303,7 +303,7 @@
 	<hr>
 	<img class="" data-src="./img/eq/curve_angle_2.svg" width="70%">
 	<br>
-	<p><cite>(<sup>*</sup>) Since the material frames depend on the rod’s centerline and are not independent degrees of freedom [Bergou 2008]</cite></p>
+	<p><q>(<sup>*</sup>) "Since the material frames depend on the rod’s centerline and are not independent degrees of freedom"</q><cite> - [Bergou et al 2008]</cite></p>
 	<aside class="notes">
 		Contrairement à Bergou, nous considérons que les degrés de liberté du système sont bien indépendants.
 		<hr>
@@ -367,9 +367,9 @@
 <section class="">
 	<h5 class="">Internal Forces and Moments</h5>
 	<ul>
-		<li>Curvatures > bending moment</li>
-		<li>Twist > twisting moment</li>
-		<li>Variation of moment > shear force</li>
+		<li>Curvatures > <mark>bending</mark> moment</li>
+		<li>Twist > <mark>twisting</mark> moment</li>
+		<li>Variation of moment > <mark>shear</mark> force</li>
 		<li>Inextensibility > stiff vs. elastic constraint > axial force</li>
 	</ul>
 	<hr>
@@ -392,7 +392,7 @@
 =============================================================================================== 
 -->
 <section class="plan center">
-	<strong>Dynamic</strong>
+	<strong>Dynamics</strong>
 	<aside class="notes">
 		A ce stade, j'ai donc tous les éléments nécessaires pour suivre l'évolution dynamic de la poutre.
 	</aside>
@@ -407,7 +407,7 @@
 		<li>Quasistatic assumption</li>
 	</ul>
 	<br><br>
-	<p><cite>(<sup>*</sup>) Also known as dynamic relaxation, Verlet integration or the semi-implicit Euler, symplectic Euler, semi-explicit Euler, Euler–Cromer or Newton–Størmer–Verlet (NSV) method. [Williams 2011]</cite></p>
+	<p><q>(<sup>*</sup>) "Also known as dynamic relaxation, Verlet integration or the semi-implicit Euler, symplectic Euler, semi-explicit Euler, Euler–Cromer or Newton–Størmer–Verlet (NSV) method."</q><cite> - [Williams 2011]</cite></p>
 	<aside class="notes">
 		Je ne vais pas m'attarder sur cet aspect. Je veux juste mentionner que, dans notre approche, seul l'état d'équilibre final de la structure nous intéresse, et que donc nous avons utilisé une méthode de résolution des équations par relaxation dynamique. 
 		<hr>
