--- a/4-model_2.html
+++ b/4-model_2.html
@@ -225,11 +225,11 @@
 	<h5 class="">Benefits</h5>
 	<ul>
 		<li>Straightforward</li>
-		<li>Complete theory</li>
+		<li><mark>Complete</mark> theory</li>
 		<li>Dynamical equations</li>
 		<li>4-DOFs ready</li>
 		<li>External distributed loads</li>
-		<li>Physical meaning</li>
+		<li><mark>Physical</mark> meaning</li>
 	</ul>
 	<aside class="notes">
 		En conclusion nous avons montré que l'approche par les équations de Kirchhoff permet de construire un modèle à 4 degrés de libertés de manière plus directe et plus complète que l'approche variationnelle.
