--- a/5-numeric.html
+++ b/5-numeric.html
@@ -37,8 +37,7 @@
 	<div class="">
 	<ul>
 		<li>Discrete Curvature > <mark>ambiguous</mark></li>
-		<li>Definitions are not equivalents</li>
-		<li>Which one best suits your need ?</li>
+		<li>Which one best suits our needs ?</li>
 		<li><mark>Bending energy</mark> benchmark > $\int \kappa^2$</li>
 	</ul>
 	</div>
@@ -94,8 +93,8 @@
 		<td height="400px"><img data-src="./img/eq/curvature_edge.gif"></td>
 	</tr>
 	<tr>
-		<td><p><small>circumscribed osculating circle ($\kappa_1$)</small></p></td>
-		<td><p><small>inscribed osculating circle ($\kappa_3$)</small></p></td>
+		<td><p>$\kappa_1$ : circumscribed osculating circle</p></td>
+		<td><p>$\kappa_3$ : inscribed osculating circle</p></td>
 	</tr>
 	<!-- <tr style="height:15px;"></tr> -->
 	<tr style="border-top:0px solid black">
@@ -254,7 +253,7 @@
 -->
 
 <section class="plan center">
-	<strong>Discrete biarc beam element</strong>
+	<strong>Discrete Biarc Beam Element</strong>
 	<aside class="notes">
 	</aside>
 </section>
