--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
 					// Specifies the themes that will be available in the themes
 					// menu panel. Set to 'false' to hide themes panel.
 					themes: [
-						{ name: 'Thesis 1', theme: 'css/theme/thesis.css' },
-						{ name: 'Thesis 2', theme: 'css/theme/thesis2.css' },
+						{ name: 'Thesis', theme: 'css/theme/thesis2.css' },
+						{ name: 'Thesis OLD', theme: 'css/theme/thesis.css' },
 						{ name: 'Black', theme: 'css/theme/black.css' },
 						{ name: 'White', theme: 'css/theme/white.css' },
 						{ name: 'League', theme: 'css/theme/league.css' },
