--- a/6-marsupilami.html
+++ b/6-marsupilami.html
@@ -104,7 +104,7 @@
 	<ul>
 		<li><mark>Object-Oriented</mark> Programming > Modularity & Abstraction</li>
 		<li>Sequential vs. <mark>Event-driven</mark> Programming</li>
-		<li>Parallel Programing</li>
+		<li>Parallel Programming</li>
 	</ul>
 	<hr>
 	<img class="stretch" data-src="./img/case/refine.gif"/>
@@ -179,7 +179,7 @@
 <section class="">
 	<h5 class="">Constrained Arch</h5>
 	<ul>
-		<li><mark>Relative error</mark> for apex position (M/A) : 12.6 - 3.2 - 0.8 - 0.2 - 0.0 %</li>
+		<li><mark>Relative error</mark> for apex position (M/A) : 12.6 - 3.2 - <mark>0.8</mark> - 0.2 - <mark>0.0</mark> %</li>
 		<li>CPU Time for Marsupilami (ST) : 80 - 160 - 320 - 740 - 1480 ms</li>
 		<li>CPU Time for Abaqus (MT) : 4200 - 5400 - 6400 - 6400 - 9700 ms</li>
 	</ul>
