--- a/1-intro.html
+++ b/1-intro.html
@@ -124,7 +124,8 @@
 	<hr>
 	La grille n'a donc pas de raideur en cisaillement et c'est ce qui lui donne sa capacité à se déformer spatialement sans faire de pli (Feuille de Papier).
 	<hr>
-	On voit sur cette image que la cinématique de la connexion est loin d'être aussi simple que celle d'un joint sphérique. En réalité il y trois axes de rotation et une excentricité qui peut générer des moments parasites.
+	On voit sur cette image que la cinématique de la connexion est loin d'être aussi simple que celle d'un joint sphérique. 
+	<!-- En réalité il y trois axes de rotation et une excentricité qui peut générer des moments parasites. -->
 	<hr>
 	Pour décrire finement une telle connexion il faut un modèle qui soit riche.
 	<!-- <hr>
@@ -241,8 +242,6 @@
 	<p>Material flexibility for <mark>structural rigidity</mark></p>
 	<p><mark>Curved shape</mark> from flat and regular grid</p>
 	<aside class="notes">
-	Les deux éléments clefs du concept sont les suivants.
-	<hr>
 	Premièrement on titre partie de la souplesse du matériau pour générer de la forme, c'est à dire de la courbure, afin de développer de la raideur géométrique.
 	<hr>
 	Deuxièmement on accède à une manière efficace sur le plan constructif de créer une enveloppe courbe, à partir d'une résille complètement standardisée et initialement plane.
