--- a/5-numeric.html
+++ b/5-numeric.html
@@ -113,8 +113,8 @@
 	<img data-src="./img/eq/discrete_curvature_3.svg" width="70%"/>
 	<aside class="notes">
 		Sur ce graphique on a tracé les deux courbures précédentes en fonction de l'angle d'ouverture du compas.
-		<hr>
-		On a également étudié la sensibilité des définitions vis à vis à vis de la différence de longueur entre les arrêtes, noté alpha.
+		<!-- <hr>
+		On a également étudié la sensibilité des définitions vis à vis à vis de la différence de longueur entre les arrêtes, noté alpha. -->
 		<hr>
 		On retrouve la différence de comportement pour des angles d'ouvertures faibles (ici sur la partie droite du graphique).
 		<hr>
@@ -146,7 +146,7 @@
 			<li>Puis sur le cas typique de l'élastica ensuite.</li>
 		</ul>
 		<hr>
-		Dans le cas du cercle, l'énergie de flexion discrète basée la courbure par les sommets approche plus rapidement la valeur théorique que son homologue basée sur la courbure par les arêtes.
+		Dans le cas du cercle, l'énergie de flexion discrète basée la courbure par les sommets (ICI A GAUCHE), approche plus rapidement la valeur théorique que son homologue basée sur la courbure par les arêtes (ICI A DROITE). L'écart relatif entre l'energie discrète et l'énergie théorique est donnée en pourcentage.
 		<hr>
 		Nous observons le même phénomène pour le cas de l'elastica.
 		<hr>
