--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
 					<hr>
 					Bonjour à toutes et à tous,
 					<hr>
-					Je vais aujourd'hui vous présenter mon travail de recherche sur les structures de type gridshell élastique, effectué sous la direction d'Olivier Baverel. En m'intéressant plus spécifiquement aux modèles de calcul dédiés à l'analyse de ces structures, qui sont fortement précontraintes du fait de leur mise en forme. On parlera de précontrainte de flexion.
+					Je vais aujourd'hui vous présenter mon travail de recherche sur les structures de type gridshell élastique. En m'intéressant plus spécifiquement aux modèles de calcul dédiés à l'analyse de ces structures, qui sont fortement précontraintes du fait de leur mise en forme. On parlera de précontrainte de flexion.
 					<hr>
 					On verra que ces ouvrages sont complexes à concevoir, et que les outils d'analyse existants ne permettent pas de répondre de manière efficace aux besoins des architectes et des ingénieurs dans un contexte de projet.
+					<hr>
+					Ce travail de recherche a été réalisé sous la direction d'Olivier Baverel, avec la participation de Jean-François Caron et de Cyril Douthe.
 			</section>
 
 			<section class="center"  data-background-transition="fade" data-transition="fade-in fade-out">
@@ -121,7 +123,7 @@
 					<br>
 					Et la casquette d'ingénieur par mon activité au sein du bureau d'étude T/E/S/S.
 					<hr>
-					Je crois que cela a donné une coloration particulière à mon travail, et je voulais donc souligner avant de rentrer dans le vif du sujet.
+					Je crois que cela a donné une coloration particulière à mon travail, et je voulais donc souligner cet aspect avant de rentrer dans le vif du sujet.
 				</aside>
 			</section>
 
